--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=1450">
-  <link rel="shortcut icon" type="image/x-icon" href="./images/Untitled-3.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="./images/1.fabicon.png" />
   <title>Arbre Prestige Hotel</title>
   <!--에오스-->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
